styles and img moved to separate folders

--- a/predavaci-protokol/predavaci_protokol_prevzeti.html
+++ b/predavaci-protokol/predavaci_protokol_prevzeti.html
@@ -3,163 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Předávací protokol v3-1</title>
-
-        <style>
-            .dbg {
-                border: 1px dashed black;
-            }
-
-            .container {
-                max-width: 750px;
-                margin-left: auto;
-                margin-right: auto;
-            }
-
-            .nadpisy {
-                font-size: 1.1em;
-            }
-
-            .nadpis {
-                font-weight: bold;
-                text-align: center;
-                letter-spacing: 0.8em;
-                padding-bottom: 5px;
-            }
-
-            .podnadpis {
-                letter-spacing: 0.5em;
-                text-align: center;
-                margin-bottom: 32px;
-            }
-
-            .formular {
-                width: 725px;
-                margin-left: auto;
-                margin-right: auto;
-            }
-
-            .ramecek {
-                border: 2px solid black;
-                margin: 8px;
-                min-height: 42px;
-            }
-
-            .ramecek > .popisek {
-                font-size: 0.825em;
-                font-weight: bold;
-                padding-left: 4px!important;
-                margin-bottom: 8px!important;
-            }
-
-            .ramecek > p {
-                margin-left: 10px;
-                line-height: 1.25em;
-            }
-
-            .predavajici, .prebirajici {
-                width: 45%;
-                min-height: 138px;
-            }
-
-            .predavajici {
-                float: left;
-            }
-
-            .prebirajici {
-                float: right;
-            }
-
-            .predavajici > p {
-                line-height: 1.85em;
-            }
-
-            .prebirajici > #kolobezka {
-                float: left;
-                margin: 16px;
-                width: 99px;
-            }
-
-            .zavady {
-                min-height: 256px;
-                margin-top: 16px;
-            }
-
-            .sluzby {
-                float: left;
-                width: 55%;
-                min-height: 42px;
-                margin-top: 12px;
-            }
-
-            .sluzby > p {
-                line-height: 1.5em;
-            }
-
-            .sluzby > label {
-                padding-left: 10px;
-            }
-
-            .terminy {
-                float: right;
-                width: 39%;
-                margin-top: 12px;
-
-            }
-
-            .terminy > div {
-                padding-left: 8px!important;
-                line-height: 1.8em;
-            }
-
-            .terminy > .poznamka {
-                font-size: 0.77em;
-                color: darkslategrey;
-                padding: 8px;
-            }
-
-            .terminy, .sluzby {
-                min-height: 140px;
-            }
-
-            .podpisy {
-                min-height: 128px!important;
-            }
-
-            .podpisy > #podpis-predavajici, #podpis-prebirajici {
-                width: 45%;
-                padding-top: 8px;
-                text-align: center;
-                text-decoration: underline;
-            }
-
-            .podpisy > #podpis-predavajici{
-                float: left;
-            }
-
-            .podpisy > #podpis-prebirajici{
-                float: right;
-            }
-
-            .info {
-                color: darkslategrey;
-                padding: 4px;
-            }
-
-            .clearfix {
-                clear: both;
-            }
-
-            .space8 {
-                height: 8px!important;
-            }
-
-            .space2 {
-                height: 2px!important;
-            }
-
-
-        </style>
-
+        <link rel="stylesheet" href="css/style_prevzeti.css">
     </head>
 
     <body>
@@ -189,7 +33,7 @@
 
                 <div class="prebirajici ramecek">
                     <span class="popisek">Přebírající:</span><br>
-                    <img id="kolobezka" alt=" " src="marty_elko_bw_small.png" />
+                    <img id="kolobezka" alt=" " src="img/marty_elko_bw_small.png" />
                     <p>
                         <b>servis-kolobezek.cz</b><br>
                         Martin Dřímal, IČ: 09294716<br>
