small styles refacroting, all moved to one file

--- a/predavaci-protokol/predavaci_protokol_prevzeti.html
+++ b/predavaci-protokol/predavaci_protokol_prevzeti.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Předávací protokol v3-1</title>
-        <link rel="stylesheet" href="css/style_prevzeti.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
 
     <body>
@@ -22,7 +22,7 @@
 
             <div class="formular">
 
-                <div class="predavajici ramecek">
+                <div class="predavajici ramecek float-left">
                     <span class="popisek">Předávající:</span><br>
                     <p>
                         Jméno:<br>
@@ -31,7 +31,7 @@
                     </p>
                 </div>
 
-                <div class="prebirajici ramecek">
+                <div class="prebirajici ramecek float-right">
                     <span class="popisek">Přebírající:</span><br>
                     <img id="kolobezka" alt=" " src="img/marty_elko_bw_small.png" />
                     <p>
@@ -109,7 +109,7 @@
                 </div>
                 <div class="space2"></div>
 
-                <div class="ramecek podpisy">
+                <div class="ramecek podpisy podpisy_prevzeti">
                     <div class="info">
                         * Předávající souhlasí s obchodními podmínkami zveřejněnými na webu https://servis-kolobezek.cz<br>
                     </div>
