--- a/predavaci-protokol/predavaci_protokol_vraceni.html
+++ b/predavaci-protokol/predavaci_protokol_vraceni.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="author" content="Martin Dřímal - servis-kolobezek.cz">
         <title>Předávací protokol v2-1</title>
-        <link rel="stylesheet" href="css/style_vraceni.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
 
     <body>
@@ -23,12 +23,12 @@
 
             <div class="formular">
 
-                <div class="predavajici ramecek">
+                <div class="predavajici ramecek float-right">
                     <span class="popisek">Přebírající:</span><br>
                     <p></p>
                 </div>
 
-                <div class="prebirajici ramecek">
+                <div class="prebirajici ramecek float-left">
                     <span class="popisek">Předávající:</span><br>
                     <img id="kolobezka" alt=" " src="img/marty_elko_bw_small.png" />
                     <p>
@@ -60,7 +60,7 @@
 
                 <div class="clearfix"></div>
 
-                <div class="ramecek podpisy">
+                <div class="ramecek podpisy podpisy_vraceni">
                     <div class="info">
                         Tento předávací protokol slouží zároveň jako příjmový pokladní doklad a účtenka. Nejsem plátce DPH.
                     </div>
